lesson12/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: test.ru
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kuber-service
            port: 
              number: 80
